--- a/app/views/admins/calendars/index.html.erb
+++ b/app/views/admins/calendars/index.html.erb
@@ -2,18 +2,28 @@
 
 <div class="text-center" style="padding: 130px 0 40px 0; font-size: 30px; font-weight: bold;">カレンダー</div>
 
-<div class="notice text-center pt-2 pb-5" style="font-size: 20px; font-weight: bold;">
-  <div style="color: red;">
-    <%= flash[:calendar_new] %>
-  </div>
-  <div style="color: #FA601A;">
-    <%= flash[:new] %>
-    <%= flash[:edit] %>
-    <%= flash[:calendar_destroy] %>
-  </div>
+<div class="notice text-center pt-2 pb-5" style="font-size: 20px; font-weight: bold; color: #FA601A;">
+  <%= flash[:new] %>
+  <%= flash[:edit] %>
+  <%= flash[:destroy] %>
 </div>
 
-<%= render "new", calendar: @calendar %>
+<div class="edit btn-sm btn-outline-secondary" style="text-align: center; margin: 0 auto; margin-bottom: 40px; width: 250px;" data-toggle="modal" data-target="#new-modal">
+  スケジュール登録
+</div>
+
+<div class="modal fade" id="new-modal" tabindex="-1" role="dialog" aria-labelledby="new-ModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content" id="form-modal">
+      <%= render "admins/calendars/new", calendar: @calendar %>
+    </div>
+  </div>
+  <div style="text-align: center;">
+    <button type="button" class="btn btn-default" data-dismiss="modal" style="color: white; font-size: 50px;">
+      <i class="far fa-times-circle"></i>
+    </button>
+  </div>
+</div>
 
 <div class="row justify-content-center" style="padding-bottom: 50px;">
   <div class="col-11">
