--- a/app/views/customers/customers/show.html.erb
+++ b/app/views/customers/customers/show.html.erb
@@ -3,8 +3,8 @@
 <div class="container"  id="accordionExample" style="padding: 160px 0 70px 0;">
   <div class="row" style="justify-content: center; padding-bottom: 50px;">
     <div>
-      <div style="padding-bottom: 20px; text-align: center; font-size: 25px; font-weight: bold;">プロフィール</div>
-      <%= link_to attachment_image_tag(@customer, :profile_image, format: 'jpeg', size: "200x200", fallback: "no-image.jpeg", size: "200x200"), edit_customer_registration_path, class: "profile" %>
+      <div style="padding-bottom: 40px; text-align: center; font-size: 35px; font-weight: bold;">プロフィール</div>
+      <%= link_to attachment_image_tag(@customer, :profile_image, fallback: "no-image.jpeg", size: "200x200"), edit_customer_registration_path, class: "image-top" %>
     </div>
   </div>
   <div style="text-align: center; font-size: 20px; font-weight: bold; color: #FA601A;">
@@ -18,12 +18,14 @@
         <div style="font-size: 22px; font-weight: bold;">お気に入りした物件</div>
       </button>
     </div>
+    
     <div class="col-4 text-center">
       <button class="btn btn-link" style="font-size: 100px; text-decoration: none;" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
         <i class="fas fa-comment"></i>
         <div style="font-size: 22px; font-weight: bold;">お問い合わせした物件</div>
       </button>
     </div>
+    
     <div class="col-4 text-center">
       <%= link_to customers_unsubscribe_path, style: "font-size: 100px; text-decoration: none;" do %>
         <i class="fas fa-sad-tear"></i>
