--- a/app/views/customers/estates/_slide.html.erb
+++ b/app/views/customers/estates/_slide.html.erb
@@ -1,7 +1,7 @@
-<div class="row" style="padding: 50px; justify-content: center; color: white; font-weight: bold; font-size: 60px;">
-  N e w
-</div>
-<div class="container">
+<div class="container">  
+  <div class="row" style="padding: 50px; justify-content: center; color: white; font-weight: bold; font-size: 60px;">
+    N e w
+  </div>
   <% if estates.present? %>
     <div id="example-3" class="carousel slide" data-ride="carousel" style="width:100%">
       <div class="carousel-inner">
@@ -11,7 +11,7 @@
               <div class="col-4">
                 <div class="card mb-4" style="height:550px;">
                   <div class="card-img-top">
-                    <%= link_to attachment_image_tag(estate, :background_image, format: 'jpeg', size: "348x200"), estate_path(estate) %>
+                    <%= link_to attachment_image_tag(estate, :background_image, size: "348x200"), estate_path(estate) %>
                   </div>
                   <div class="card-body" style="padding: 10px 0 0 8px;">
                     <div class="card-title">
@@ -41,7 +41,7 @@
               <div class="col-4">
                 <div class="card mb-4" style="height:550px;">
                   <div class="card-img-top">
-                    <%= link_to attachment_image_tag(estate, :background_image, format: 'jpeg', size: "348x200"), estate_path(estate) %>
+                    <%= link_to attachment_image_tag(estate, :background_image, size: "348x200"), estate_path(estate) %>
                   </div>
                   <div class="card-body" style="padding: 10px 0 0 8px;">
                     <div class="card-title">
