--- a/app/views/admins/estates/index.html.erb
+++ b/app/views/admins/estates/index.html.erb
@@ -1,57 +1,58 @@
 <%= render "admins/customers/header", researches: @researches %>
 
-<%= form_with(scope: :search, url: admins_estates_path, method: :get, local: true) do |f| %>
-  <div style="text-align: center; padding-top: 130px; font-size: 20px; font-weight: bold;">
-    <%= f.label :間取り %>
-    <%= f.collection_select :floor, Estate.group(:floor), :floor, :floor, selected: @search_params[:floor], include_blank: "間取り" %>
-    <%= f.label :賃料 %>
-    <%= f.select :price_from,
-      [["30000"],["35000"],["40000"],["45000"],["50000"],["55000"],["60000"],["65000"],["70000"],["75000"],["80000"],["85000"],["90000"],["95000"],["100000"],
-      ["105000"],["110000"],["115000"],["120000"],["125000"],["130000"],["135000"],["140000"],["145000"],["150000"],["155000"],["160000"],["165000"],["170000"],
-      ["175000"],["180000"],["185000"],["190000"],["195000"],["200000"],["210000"],["220000"],["230000"],["240000"],["250000"],["260000"],["270000"],["280000"],
-      ["290000"],["300000"],["310000"],["320000"],["330000"],["340000"],["350000"],["360000"],["370000"],["380000"],["390000"],["400000"],["410000"],["420000"],
-      ["430000"],["440000"],["450000"],["460000"],["470000"],["480000"],["490000"],["500000"],["1000000"]], {include_blank: "賃料(下限)", selected: @search_params[:price_from]} %> ~
-    <%= f.select :price_to,
-      [["30000"],["35000"],["40000"],["45000"],["50000"],["55000"],["60000"],["65000"],["70000"],["75000"],["80000"],["85000"],["90000"],["95000"],["100000"],
-      ["105000"],["110000"],["115000"],["120000"],["125000"],["130000"],["135000"],["140000"],["145000"],["150000"],["155000"],["160000"],["165000"],["170000"],
-      ["175000"],["180000"],["185000"],["190000"],["195000"],["200000"],["210000"],["220000"],["230000"],["240000"],["250000"],["260000"],["270000"],["280000"],
-      ["290000"],["300000"],["310000"],["320000"],["330000"],["340000"],["350000"],["360000"],["370000"],["380000"],["390000"],["400000"],["410000"],["420000"],
-      ["430000"],["440000"],["450000"],["460000"],["470000"],["480000"],["490000"],["500000"],["1000000"]], {include_blank: "賃料(上限)", selected: @search_params[:price_to]} %>
-  </div>
-  <div style="text-align: center; padding-bottom: 50px; font-size: 20px; font-weight: bold;">
-    <%= f.label :物件名 %>
-    <%= f.text_field :name, value: @search_params[:name] %>
-    <%= f.label :住所 %>
-    <%= f.text_field :address, value: @search_params[:address] %>
-    <%= f.submit "検索", class: "searches" %>
-  </div>
-  <% end %>
-</div>
-
-<div style="text-align: center; font-size: 30px; font-weight: bold;">
-  物件一覧
-</div>
-
-<div style="padding: 50px 0; text-align: center; font-size: 20px; font-weight: bold; color: #FA601A;">
-  <%= flash[:new] %>
-  <%= flash[:notice] %>
-  <%= flash[:destroy] %>
-</div>
-
 <div class="container" style="margin-bottom: 20px;">
+  <%= form_with(scope: :search, url: admins_estates_path, method: :get, local: true) do |f| %>
+    <div style="text-align: center; padding-top: 130px; font-size: 20px; font-weight: bold;">
+      <%= f.label :間取り %>
+      <%= f.collection_select :floor, Estate.group(:floor), :floor, :floor, selected: @search_params[:floor], include_blank: "間取り" %>
+      <%= f.label :賃料 %>
+      <%= f.select :price_from,
+        [["30000"],["35000"],["40000"],["45000"],["50000"],["55000"],["60000"],["65000"],["70000"],["75000"],["80000"],["85000"],["90000"],["95000"],["100000"],
+        ["105000"],["110000"],["115000"],["120000"],["125000"],["130000"],["135000"],["140000"],["145000"],["150000"],["155000"],["160000"],["165000"],["170000"],
+        ["175000"],["180000"],["185000"],["190000"],["195000"],["200000"],["210000"],["220000"],["230000"],["240000"],["250000"],["260000"],["270000"],["280000"],
+        ["290000"],["300000"],["310000"],["320000"],["330000"],["340000"],["350000"],["360000"],["370000"],["380000"],["390000"],["400000"],["410000"],["420000"],
+        ["430000"],["440000"],["450000"],["460000"],["470000"],["480000"],["490000"],["500000"],["1000000"]], {include_blank: "賃料(下限)", selected: @search_params[:price_from]} %> ~
+      <%= f.select :price_to,
+        [["30000"],["35000"],["40000"],["45000"],["50000"],["55000"],["60000"],["65000"],["70000"],["75000"],["80000"],["85000"],["90000"],["95000"],["100000"],
+        ["105000"],["110000"],["115000"],["120000"],["125000"],["130000"],["135000"],["140000"],["145000"],["150000"],["155000"],["160000"],["165000"],["170000"],
+        ["175000"],["180000"],["185000"],["190000"],["195000"],["200000"],["210000"],["220000"],["230000"],["240000"],["250000"],["260000"],["270000"],["280000"],
+        ["290000"],["300000"],["310000"],["320000"],["330000"],["340000"],["350000"],["360000"],["370000"],["380000"],["390000"],["400000"],["410000"],["420000"],
+        ["430000"],["440000"],["450000"],["460000"],["470000"],["480000"],["490000"],["500000"],["1000000"]], {include_blank: "賃料(上限)", selected: @search_params[:price_to]} %>
+    </div>
+    <div style="text-align: center; padding-bottom: 50px; font-size: 20px; font-weight: bold;">
+      <%= f.label :物件名 %>
+      <%= f.text_field :name, value: @search_params[:name] %>
+      <%= f.label :住所 %>
+      <%= f.text_field :address, value: @search_params[:address] %>
+      <%= f.submit "検索", class: "searches" %>
+    </div>
+  <% end %>
+
+  <div style="text-align: center; font-size: 30px; font-weight: bold;">
+    物件一覧
+  </div>
+
+  <div style="padding: 50px 0; text-align: center; font-size: 20px; font-weight: bold; color: #FA601A;">
+    <%= flash[:new] %>
+    <%= flash[:edit] %>
+    <%= flash[:destroy] %>
+  </div>
+
   <% if @estates.present? %>
     <% @estates.each do |estate| %>
-    
-    <div id="estate_<%= estate.id %>">
-      <%= render "admins/estates/estate", estate: estate %>
-    </div>
-    
+      <div id="estate_<%= estate.id %>">
+        <%= render "admins/estates/index_estate", estate: estate %>
+      </div>
     <% end %>
   <% else %>
     <% if @search_params.present? %>
-      <div style="text-align: center; padding-top: 70px; font-size: 25px; font-weight: bold;">検索条件に該当する入稿物件はございません</div>
+      <div style="text-align: center; padding-top: 70px; font-size: 25px; font-weight: bold;">
+        検索条件に該当する入稿物件はございません
+      </div>
     <% else %>
-      <div style="text-align: center; padding-top: 70px; font-size: 25px; font-weight: bold;">入稿物件はございません</div>
+      <div style="text-align: center; padding-top: 70px; font-size: 25px; font-weight: bold;">
+        入稿物件はございません
+      </div>
     <% end %>
   <% end %>
 </div>
