--- a/app/views/admins/estates/new.html.erb
+++ b/app/views/admins/estates/new.html.erb
@@ -1,31 +1,33 @@
 <%= render "admins/customers/header", researches: @researches %>
 
-<div style="text-align: center; padding: 130px 0 50px 0; font-size: 30px; font-weight: bold;">物件入稿画面</div>
+<div class="container">
+  <div style="text-align: center; padding: 130px 0 40px 0; font-size: 35px; font-weight: bold;">
+    物件入稿
+  </div>
 
-<%= render 'layouts/error_messages', model: @estate %>
+  <%= render 'layouts/error_messages', model: @estate %>
 
-<%= form_with model: @estate, url: admins_estates_path, local: true do |f| %>
-  <div class="container">
-    <div class="card shadow" style="margin: 0 0 120px 0;">
-      <div class="row pt-4 pb-4">
+  <%= form_with model: @estate, url: admins_estates_path, local: true do |f| %>
+    <div class="card shadow" style="margin-bottom: 120px;">
+      <div class="row pt-5 pb-4">
         <div class="col-2 text-center"><%= f.label :物件名 %></div>
-        <div class="col-5"><%= f.text_field :name, placeholder:"techroom", :size=>"50" %></div>
-        <div class="col-2 pt-1 text-center"><%= f.label :部屋番号 %></div>
-        <div class="col-1"><%= f.number_field :room_number.to_s, placeholder:"304 (半角数字)" %></div>
+        <div class="col-9" style="padding-left: 1px;"><%= f.text_field :name, placeholder:"techroom", :size=>"108" %></div>
+      </div>
+      <div class="row pb-4">
+        <div class="col-2 text-center"><%= f.label :部屋番号 %></div>
+        <div class="col-2" style="padding-left: 1px;"><%= f.number_field :room_number.to_s, placeholder: "304 (半角数字のみ)" %></div>
+        <div class="col-1 mr-4 text-right"><%= f.label :賃料 %></div>
+        <div class="col-2"><%= f.number_field :price, placeholder: "30000~(半角数字のみ)" %></div>
+        <div class="col-1 ml-5 mr-3 text-center"><%= f.label :間取り %></div>
+        <div class="col-2 mr-4"><%= f.text_field :floor, placeholder: "2LDK(半角数字・全角英字)", :size=>"24" %></div>
       </div>
       <div class="row pb-4">
         <div class="col-2 text-center"><%= f.label :住所 %></div>
-        <div class="col"><%= f.text_field :address, :size=>"103" %></div>
-      </div>
-      <div class="row pb-4">
-        <div class="col-2 text-center"><%= f.label :賃料 %></div>
-        <div class="col-2"><%= f.number_field :price, value: "0000" %></div>
-        <div class="col-2 pt-1 text-center"><%= f.label :間取り %></div>
-        <div class="col-2"><%= f.text_field :floor, placeholder: "2LDK(半角数字)" %></div>
+        <div class="col" style="padding-left: 1px;"><%= f.text_field :address, placeholder: "東京都新宿区岡田町1-2-2", :size=>"108" %></div>
       </div>
       <div class="row pb-4">
         <div class="col-2 text-center"><%= f.label :物件概要 %></div>
-        <div class="col">
+        <div class="col" style="padding-left: 1px;">
           <%= f.text_area :info, placeholder:
           "このお家の魅力は、何と言っても広々としたリビングです。LDKの広さは20帖もございます。
 大きなテレビも置けますし、大きなテーブルも置けます。
@@ -36,23 +38,23 @@
 
 物件設備：エレベーター、２４時間ゴミ出し可、駐輪場、TVモニター付オートロック、宅配BOX
 部屋設備：バス・トイレ別、独立洗面台、浴室乾燥機、温水洗浄便座、室内洗濯機置場、３口ガスコンログリル付、バルコニー有",
-          :size=>"102x10" %>
+          :size=>"107x10" %>
         </div>
       </div>
       <div class="row pb-4" style="margin-right: 20px;">
         <div class="col pt-5 text-center">
           <%= f.label :背景画像 %>
-          <%= f.attachment_field :background_image %>
+          <%= f.attachment_field :background_image, class: 'img_field' %>
         </div>
         <div>
-          <%= attachment_image_tag @estate, :background_image, format: 'jpeg', size: "150x150" %>
+          <%= attachment_image_tag(@estate, :background_image, onClick: "$('.img_field').click()", size: "150x150", class: 'image-top') %>
         </div>
         <div class="col pt-5 text-center">
           <%= f.label :間取り図画像 %>
           <%= f.attachment_field :floor_image %>
         </div>
         <div>
-          <%= attachment_image_tag @estate, :floor_image, format: 'jpeg', size: "150x150" %>
+          <%= attachment_image_tag @estate, :floor_image, size: "150x150" %>
         </div>
       </div>
       <div class="row pb-4" style="margin-right: 20px;">
@@ -61,14 +63,14 @@
           <%= f.attachment_field :property_image_a %>
         </div>
         <div>
-          <%= attachment_image_tag @estate, :property_image_a, format: 'jpeg', size: "150x150" %>
+          <%= attachment_image_tag @estate, :property_image_a, size: "150x150" %>
         </div>
         <div class="col pt-5 text-center">
           <%= f.label :物件画像２ %>
           <%= f.attachment_field :property_image_b %>
         </div>
         <div>
-          <%= attachment_image_tag @estate, :property_image_b, format: 'jpeg', size: "150x150" %>
+          <%= attachment_image_tag @estate, :property_image_b, size: "150x150" %>
         </div>
       </div>
       <div class="row pb-4" style="margin-right: 20px;">
@@ -77,14 +79,14 @@
           <%= f.attachment_field :property_image_c %>
         </div>
         <div>
-          <%= attachment_image_tag @estate, :property_image_c, format: 'jpeg', size: "150x150" %>
+          <%= attachment_image_tag @estate, :property_image_c, size: "150x150" %>
         </div>
         <div class="col pt-5 text-center">
           <%= f.label :物件画像４ %>
           <%= f.attachment_field :property_image_d %>
         </div>
         <div>
-          <%= attachment_image_tag @estate, :property_image_d, format: 'jpeg', size: "150x150" %>
+          <%= attachment_image_tag @estate, :property_image_d, size: "150x150" %>
         </div>
       </div>
       <div class="row pb-4" style="margin-right: 20px;">
@@ -93,14 +95,14 @@
           <%= f.attachment_field :property_image_e %>
         </div>
         <div>
-          <%= attachment_image_tag @estate, :property_image_e, format: 'jpeg', size: "150x150" %>
+          <%= attachment_image_tag @estate, :property_image_e, size: "150x150" %>
         </div>
         <div class="col pt-5 text-center">
           <%= f.label :物件画像６ %>
           <%= f.attachment_field :property_image_f %>
         </div>
         <div>
-          <%= attachment_image_tag @estate, :property_image_f, format: 'jpeg', size: "150x150" %>
+          <%= attachment_image_tag @estate, :property_image_f, size: "150x150" %>
         </div>
       </div>
       <div class="row pb-4" style="margin-right: 20px;">
@@ -109,14 +111,14 @@
           <%= f.attachment_field :property_image_g %>
         </div>
         <div>
-          <%= attachment_image_tag @estate, :property_image_g, format: 'jpeg', size: "150x150" %>
+          <%= attachment_image_tag @estate, :property_image_g, size: "150x150" %>
         </div>
         <div class="col pt-5 text-center">
           <%= f.label :物件画像８ %>
           <%= f.attachment_field :property_image_h %>
         </div>
         <div>
-          <%= attachment_image_tag @estate, :property_image_h, format: 'jpeg', size: "150x150" %>
+          <%= attachment_image_tag @estate, :property_image_h, size: "150x150" %>
         </div>
       </div>
       <div class="row pb-4" style="margin-right: 20px;">
@@ -125,14 +127,14 @@
           <%= f.attachment_field :property_image_i %>
         </div>
         <div>
-          <%= attachment_image_tag @estate, :property_image_i, format: 'jpeg', size: "150x150" %>
+          <%= attachment_image_tag @estate, :property_image_i, size: "150x150" %>
         </div>
         <div class="col pt-5 text-center">
           <%= f.label :物件画像１０ %>
           <%= f.attachment_field :property_image_j %>
         </div>
         <div>
-          <%= attachment_image_tag @estate, :property_image_j, format: 'jpeg', size: "150x150" %>
+          <%= attachment_image_tag @estate, :property_image_j, size: "150x150" %>
         </div>
       </div>
       <div class="row pb-4" style="margin-right: 20px;">
@@ -141,21 +143,21 @@
           <%= f.attachment_field :property_image_k %>
         </div>
         <div>
-          <%= attachment_image_tag @estate, :property_image_k, format: 'jpeg', size: "150x150" %>
+          <%= attachment_image_tag @estate, :property_image_k, size: "150x150" %>
         </div>
         <div class="col pt-5 text-center">
           <%= f.label :物件画像１２ %>
           <%= f.attachment_field :property_image_l %>
         </div>
         <div>
-          <%= attachment_image_tag @estate, :property_image_l, format: 'jpeg', size: "150x150" %>
+          <%= attachment_image_tag @estate, :property_image_l, size: "150x150" %>
         </div>
       </div>
       <div class="row justify-content-center" style="padding: 60px 0;">
         <%= f.submit "入稿する", class: "search" %>
       </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
 
 
