--- a/app/views/admins/researches/_researches.html.erb
+++ b/app/views/admins/researches/_researches.html.erb
@@ -1,51 +1,53 @@
-<div style="text-align: center; padding: 130px 0 50px 0; font-size: 20px; font-weight: bold;">
-  <%= form_with(scope: :search, url: admins_researches_path, method: :get, local: true) do |f| %>
-    <%= f.label :会員名 %>
-    <%= f.text_field :name, value: search_params[:name] %>
-    <%= f.date_field :created_at_from, value: search_params[:created_at_from] %> ~
-    <%= f.date_field :created_at_to, value: search_params[:created_at_to] %>
-    <%= f.submit "検索", class: "searches" %>
-  <% end %>
-</div>
-
-<div style="text-align: center; font-size: 30px; font-weight: bold;">お問い合わせ一覧</div>
-
-<div style="padding: 50px 0; text-align: center; font-size: 20px; font-weight: bold; color: #FA601A;">
-  <%= flash[:status] %>
-</div>
-
 <div class="container" style="margin-bottom: 20px;">
+  <div style="text-align: center; padding: 130px 0 50px 0; font-size: 20px; font-weight: bold;">
+    <%= form_with(scope: :search, url: admins_researches_path, method: :get, local: true) do |f| %>
+      <%= f.label :会員名 %>
+      <%= f.text_field :name, value: search_params[:name] %>
+      <%= f.date_field :created_at_from, value: search_params[:created_at_from] %> ~
+      <%= f.date_field :created_at_to, value: search_params[:created_at_to] %>
+      <%= f.submit "検索", class: "searches" %>
+    <% end %>
+  </div>
+  
+  <div style="text-align: center; font-size: 30px; font-weight: bold;">
+    お問い合わせ一覧
+  </div>
+  
+  <div style="padding: 50px 0; text-align: center; font-size: 20px; font-weight: bold; color: #FA601A;">
+    <%= flash[:status] %>
+  </div>
+
   <% if researches.present? %>
-  <div class="card shadow" style="margin-bottom: 50px;">
-    <div class="row">
-      <div class="col">
-        <table class="table">
-          <tr>
-            <th>物件名</th>
-            <th>名前</th>
-            <th>お問い合わせ日時</th>
-            <th>対応状況</th>
-          </tr>
-          <% researches.each do |research| %>
+    <div class="card shadow" style="margin-bottom: 50px;">
+      <div class="row">
+        <div class="col">
+          <table class="table">
             <tr>
-              <td class="name" style="width: 400px;">
-                <%= link_to admins_research_path(research) do %>
-                  <%= research.estate.name %>　<%= research.estate.room_number %>号室
-                <% end %>
-              </td>
-              <td class="name" style="width: 220px;"><%= research.customer.name %> 様</td>
-              <td style="width: 180px;"><%= research.created_at.strftime('%Y年%m月%d日 %H時%M分') %></td>
-              <% if research.status == "未対応" %>
-                <td style="text-align: center; width: 70px; color: red;"><%= research.status %></td>
-              <% elsif research.status == "対応済" %>
-                <td style="text-align: center; width: 70px; color: green;"><%= research.status %></td>
-              <% end %>
+              <th>物件名</th>
+              <th>名前</th>
+              <th>お問い合わせ日時</th>
+              <th>対応状況</th>
             </tr>
-          <% end %>
-        </table>
+            <% researches.each do |research| %>
+              <tr>
+                <td class="name" style="width: 400px;">
+                  <%= link_to admins_research_path(research) do %>
+                    <%= research.estate.name %>　<%= research.estate.room_number %>号室
+                  <% end %>
+                </td>
+                <td class="name" style="width: 220px;"><%= research.customer.name %> 様</td>
+                <td style="width: 180px;"><%= research.created_at.strftime('%Y年%m月%d日 %H時%M分') %></td>
+                <% if research.status == "未対応" %>
+                  <td style="text-align: center; width: 70px; color: red;"><%= research.status %></td>
+                <% elsif research.status == "対応済" %>
+                  <td style="text-align: center; width: 70px; color: green;"><%= research.status %></td>
+                <% end %>
+              </tr>
+            <% end %>
+          </table>
+        </div>
       </div>
     </div>
-  </div>
   <% else %>
     <% if search_params.present? %>
       <div style="text-align: center; padding-top: 60px; font-size: 25px; font-weight: bold;">検索条件に該当するお問い合わせはございません</div>
