--- a/app/views/customers/customers/unsubscribe.html.erb
+++ b/app/views/customers/customers/unsubscribe.html.erb
@@ -1,7 +1,9 @@
 <%= render "customers/customers/header" %>
 
-<div style="text-align: center; padding: 130px 0 30px 0; font-size: 30px; font-weight: bold;">退会画面</div>
 <div class="container">
+  <div style="text-align: center; padding: 130px 0 30px 0; font-size: 30px; font-weight: bold;">
+    退会画面
+  </div>
   <div class="row pt-4">
     <div class="col" style="text-align: center; font-size: 30px">
       <p>退会処理を行う場合、『退会する』ボタンを押して下さい。<br>
