--- a/app/views/customers/registrations/edit.html.erb
+++ b/app/views/customers/registrations/edit.html.erb
@@ -1,30 +1,31 @@
 <%= render "customers/customers/header" %>
 
-<div style="text-align: center; padding: 150px 0 30px 0; font-size: 30px; font-weight: bold;">プロフィール編集</div>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "customers/shared/error_messages", resource: resource %>
-
-  <div class="container">
-    <div class="row justify-content-center pt-5 pb-4">
-      <%= attachment_image_tag(@customer, :profile_image, format: 'jpeg', size: "200x200", fallback: "no-image.jpeg", size: "200x200") %>
-    </div>
-    <div class="row pt-5 pb-4" style="margin-left: 420px;">
-      <%= f.file_field :profile_image %>
-    </div>
-      <div class="row pt-5 pb-4">
-        <div class="col-4" style="text-align: center; font-weight: bold; font-size: 25px;"><%= f.label :お名前 %></div>
-        <div class="col-7" style="font-size: 25px;"><%= f.text_field :name, :size => "50" %></div>
-      </div>
-      <div class="row pb-4">
-        <div class="col-4" style="text-align: center; font-weight: bold; font-size: 25px;"><%= f.label :メールアドレス %></div>
-        <div class="col-7" style="font-size: 25px;"><%= f.email_field :email, :size => "50" %></div>
-      </div>
-      <div class="row" style="padding-bottom: 60px;">
-        <div class="col-4" style="text-align: center; font-weight: bold; font-size: 25px;"><%= f.label :電話番号 %></div>
-        <div class="col-7" style="font-size: 25px;"><%= f.text_field :phone_number, :size => "50" %></div>
-      </div>
-      <div class="row justify-content-center" style="padding-bottom: 100px;">
-        <%= f.submit "保存", class: "search" %>
-      </div>
+<div class="container">
+  <div style="list-style: none; text-align: center; padding: 150px 0 50px 0; font-size: 35px; font-weight: bold;">
+    プロフィール編集
   </div>
-<% end %>
+
+  <%= render 'layouts/error_messages', model: @customer %>
+
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <div class="row justify-content-center pb-4">
+      <%= f.attachment_field :profile_image, class: 'img_field', style: "display: none;" %>
+      <%= attachment_image_tag(@customer, :profile_image, fallback: "no-image.jpeg", onClick: "$('.img_field').click()", size: "200x200", class: 'image-top') %>
+    </div>
+    <div class="row pt-5 pb-4">
+      <div class="col-4" style="text-align: center; font-weight: bold; font-size: 25px;"><%= f.label :お名前 %></div>
+      <div class="col-7" style="font-size: 25px;"><%= f.text_field :name, :size => "50" %></div>
+    </div>
+    <div class="row pb-4">
+      <div class="col-4" style="text-align: center; font-weight: bold; font-size: 25px;"><%= f.label :メールアドレス %></div>
+      <div class="col-7" style="font-size: 25px;"><%= f.email_field :email, :size => "50" %></div>
+    </div>
+    <div class="row" style="padding-bottom: 60px;">
+      <div class="col-4" style="text-align: center; font-weight: bold; font-size: 25px;"><%= f.label :電話番号 %></div>
+      <div class="col-7" style="font-size: 25px;"><%= f.text_field :phone_number, :size => "50" %></div>
+    </div>
+    <div class="row justify-content-center" style="padding-bottom: 100px;">
+      <%= f.submit "保存", class: "search" %>
+    </div>
+  <% end %>
+</div>
